# slide-gen

./: .gitignore  README.md  pyproject.toml
examples/: sample_input.md
slide_gen/: __init__.py  cli.py  config.py  ingest.py  models.py  pipeline.py  prompts.py
slide_gen/images/: __init__.py  base.py  gemini_image.py  openai_image.py
slide_gen/llm/: __init__.py  base.py  claude.py  gemini.py  openai_provider.py
slide_gen/render/: __init__.py  beamer.py  compile.py
tests/: test_beamer_render.py  test_compile.py  test_ingest.py  test_pipeline.py
