[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-gen"
version = "0.1.0"
description = "Generate production-ready slide decks from source documents using AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jacob" }]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.6",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
# Provider SDKs are optional so the tool installs without every key/SDK.
# Install the one(s) you use, or `slide-gen[all]` for everything.
gpt = ["openai>=1.40"]
claude = ["anthropic>=0.40"]
gemini = ["google-genai>=0.3"]
all = ["openai>=1.40", "anthropic>=0.40", "google-genai>=0.3"]
dev = ["pytest>=8.0"]

[project.scripts]
slide-gen = "slide_gen.cli:main"

[tool.setuptools.packages.find]
include = ["slide_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
